Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Private Beta
-
None
-
None
Description
When we delete a tablet, we add all of the blocks to the orphan block set, and then flush the metadata. Then, we try to delete all the blocks. But, we don't ever flush the tablet metadata again. So, this means that tablet metadata for deleted tablets always has a lot of orphaned blocks in it (which we think we have to roll-forward on every startup). This severely impacts the start time of a TS with lots of tombstones.
Attachments
Issue Links
- relates to
-
KUDU-1061 DeleteTablet should asynchronously (or batch) delete blocks
-
- Resolved
-