KUDU-1060. Avoid attempting to delete orphaned blocks on startup

This patch clears the orphaned rowsets in a tombstoned or deleted
superblock after the initial Flush() call deletes them.

Change-Id: I6660df4dce145f8f629297718b4942def2b6795e
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/7646
Tested-by: jenkins
Reviewed-by: Todd Lipcon <todd@cloudera.com>